# realtime-messenger

./: .gitmodules  CMakeLists.txt  README.md  gen_grpc_cpp.sh  realtime_messenger.proto
src/: main.cc
src/domain/entity/: message.h  room.h  user.h
src/infrastructure/grpc/service/: realtime_messenger_service.cc  realtime_messenger_service.h
src/infrastructure/messaging/: client.cc  client.h
src/infrastructure/mstore/: mstore_client.cc  mstore_client.h
src/usecase/interactor/: interactor.h
src/usecase/port/input/rmsg/: realtime_messenger.h
src/usecase/port/output/messaging/: messaging.h  subscription.h
src/usecase/port/output/mstore/: mstore.h
src/usecase/port/output/streaming/: streaming.h
src/util/: singleton.cc  singleton.h
